Fix suggestions emitted by the `StringCaseLocaleUsage` check (#400)
The suggested `Locale` arguments are now always located in the correct place.